# FastAPI-Demo-App

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  env.py  pyproject.toml  pytest.ini  ruff.toml  test.py
deploy/: run-server.sh
migrations/: env.py
migrations/versions/: 0cb1df923791_create_users_table.py  a5d9f0094461_.py  eca357cc9b17_added_org_table.py
scripts/: __init__.py  db_scripts.py
src/: __init__.py  redis_client.py  worker.py
src/app/: __init__.py
src/app/routers/: auth_router.py  deps.py  org_router.py  user_router.py
src/auth/: security.py
src/database/: __init__.py  models.py
src/repo/: base_repo.py  user_repo.py
src/repo/postgres/: base_repo.py  db_helper.py  org_repo.py  user_repo.py
src/rmq/: __init__.py  publisher.py  worker.py
src/schemas/: org_schema.py  user_schema.py
src/services/: org_service.py  user_service.py
tests/: __init__.py  conftest.py  fixtures.py
tests/repo/: test_user_repo.py
tests/repo/postgres/: test_user_repo.py
tests/service/: test_user_service.py
tests/src/app/routers/: test_org_router.py  test_user_router.py
tests/src/repo/postgres/: test_org_repo.py  test_user_repo.py
tests/src/services/: test_org_service.py  test_user_service.py
