[project]
name = "fastapi-demo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.2",
    "psycopg[binary]>=3.2.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
